--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
-  <script type="text/javascript">
+  <meta name="theme-color" content="#F7F8FA" />
+  <meta name="description" content="E-Pharmacy..." />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+  <title>E-Pharmacy</title>
 
+  <script type="text/javascript">
     (function (l) {
       if (l.search[1] === '/') {
         var decoded = l.search
@@ -26,7 +27,6 @@
       }
     })(window.location);
   </script>
-
 </head>
 
 <body>
